--- a/AviaSales/app/build.gradle
+++ b/AviaSales/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
+    compile 'org.mockito:mockito-core:2.0.79-beta'
 }
