--- a/AviaSales/app/build.gradle
+++ b/AviaSales/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'org.mockito:mockito-core:2.0.79-beta'
 
+    compile 'com.google.code.gson:gson:2.5'
+
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:24.0.0'
