--- a/AviaSales/app/build.gradle
+++ b/AviaSales/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.5'
 
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+
+
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:24.0.0'
