--- a/AviaSales/app/src/main/AndroidManifest.xml
+++ b/AviaSales/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="avia.androi.innopolis.com.aviasales"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:name=".objects.AppContext"
